--- a/app/src/main/res/layout/recipe_list_row.xml
+++ b/app/src/main/res/layout/recipe_list_row.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:focusable="true"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
@@ -13,18 +14,15 @@
 
     <TextView
         android:id="@+id/name"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:textStyle="bold"
-        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/link"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/name"
-        android:layout_alignParentStart="true" />
+        android:layout_height="wrap_content"/>
 
 
-</RelativeLayout>
+</LinearLayout>
