--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -14,7 +14,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:ems="10"
-        android:text="" android:inputType="text"
+        android:inputType="text"
+        android:hint="enter recipe name"
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -26,17 +27,64 @@
         app:layout_constraintTop_toBottomOf="@id/name_edit_text"
         app:layout_constraintLeft_toLeftOf="parent"
         android:ems="10"
-        android:text="" android:inputType="text"
+        android:inputType="text"
+        android:hint="enter recipe link"
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="0dp" />
+
+    <EditText
+        android:id="@+id/hours_edit_text"
+        android:layout_width="48dp"
+        android:layout_height="41dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="-1dp"
+        android:ems="10"
+        android:inputType="number"
+        android:hint="0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/link_edit_text" />
+
+    <TextView
+        android:id="@+id/hours_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="hour(s)"
+        app:layout_constraintLeft_toRightOf="@+id/hours_edit_text"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/link_edit_text" />
+
+    <EditText
+        android:id="@+id/minutes_edit_text"
+        android:layout_width="49dp"
+        android:layout_height="41dp"
+        android:ems="10"
+        android:inputType="number"
+        android:hint="0"
+        app:layout_constraintLeft_toRightOf="@+id/hours_text"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="-1dp"
+        app:layout_constraintTop_toBottomOf="@+id/link_edit_text" />
+
+    <TextView
+        android:id="@+id/minutes_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="minutes(s)"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/link_edit_text"
+        app:layout_constraintLeft_toRightOf="@+id/minutes_edit_text"
+        android:layout_marginLeft="0dp" />
 
     <Button
         android:id="@+id/save_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/link_edit_text"
+        app:layout_constraintTop_toBottomOf="@+id/hours_edit_text"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="10dp"
-        android:text="save" />
+        android:text="save"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="8dp" />
 
 </android.support.constraint.ConstraintLayout>
