--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -32,8 +32,19 @@
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="0dp" />
 
+    <TextView
+        android:id="@+id/prep_time_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="5dp"
+        android:text="Prep Time:"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/link_edit_text" />
+
     <EditText
-        android:id="@+id/hours_edit_text"
+        android:id="@+id/prep_hours_edit_text"
         android:layout_width="48dp"
         android:layout_height="41dp"
         android:layout_marginLeft="16dp"
@@ -42,45 +53,100 @@
         android:inputType="number"
         android:hint="0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/link_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/prep_time_header" />
 
     <TextView
-        android:id="@+id/hours_text"
+        android:id="@+id/prep_hours_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="hour(s)"
-        app:layout_constraintLeft_toRightOf="@+id/hours_edit_text"
+        app:layout_constraintLeft_toRightOf="@+id/prep_hours_edit_text"
         android:layout_marginLeft="0dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/link_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/prep_time_header" />
 
     <EditText
-        android:id="@+id/minutes_edit_text"
+        android:id="@+id/prep_minutes_edit_text"
         android:layout_width="49dp"
         android:layout_height="41dp"
         android:ems="10"
         android:inputType="number"
         android:hint="0"
-        app:layout_constraintLeft_toRightOf="@+id/hours_text"
+        app:layout_constraintLeft_toRightOf="@+id/prep_hours_text"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="-1dp"
-        app:layout_constraintTop_toBottomOf="@+id/link_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/prep_time_header" />
 
     <TextView
-        android:id="@+id/minutes_text"
+        android:id="@+id/prep_minutes_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="minutes(s)"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/link_edit_text"
-        app:layout_constraintLeft_toRightOf="@+id/minutes_edit_text"
+        app:layout_constraintTop_toBottomOf="@+id/prep_time_header"
+        app:layout_constraintLeft_toRightOf="@+id/prep_minutes_edit_text"
+        android:layout_marginLeft="0dp" />
+
+    <TextView
+        android:id="@+id/cook_time_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="9dp"
+        android:text="Cook Time:"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/prep_hours_edit_text" />
+
+    <EditText
+        android:id="@+id/cook_hours_edit_text"
+        android:layout_width="48dp"
+        android:layout_height="41dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="-1dp"
+        android:ems="10"
+        android:inputType="number"
+        android:hint="0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cook_time_header" />
+
+    <TextView
+        android:id="@+id/cook_hours_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="hour(s)"
+        app:layout_constraintLeft_toRightOf="@+id/cook_hours_edit_text"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/cook_time_header" />
+
+    <EditText
+        android:id="@+id/cook_minutes_edit_text"
+        android:layout_width="49dp"
+        android:layout_height="41dp"
+        android:ems="10"
+        android:inputType="number"
+        android:hint="0"
+        app:layout_constraintLeft_toRightOf="@+id/cook_hours_text"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="-1dp"
+        app:layout_constraintTop_toBottomOf="@+id/cook_time_header" />
+
+    <TextView
+        android:id="@+id/cook_minutes_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="minutes(s)"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/cook_time_header"
+        app:layout_constraintLeft_toRightOf="@+id/cook_minutes_edit_text"
         android:layout_marginLeft="0dp" />
 
     <Button
         android:id="@+id/save_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/hours_edit_text"
+        app:layout_constraintTop_toBottomOf="@+id/cook_hours_edit_text"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="10dp"
         android:text="save"
