--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -14,7 +14,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_link_black_48dp" />
+        app:srcCompat="@drawable/ic_link_black_48dp"
+        android:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/recipe_link"
@@ -26,7 +27,8 @@
         android:textColorLink="@color/colorPrimaryDark"
         app:layout_constraintLeft_toRightOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="8dp" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -36,7 +38,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        android:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/recipe_time"
@@ -46,6 +49,16 @@
         android:layout_marginTop="32dp"
         android:text="TextView"
         app:layout_constraintLeft_toRightOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/recipe_link" />
+        app:layout_constraintTop_toTopOf="@+id/recipe_link"
+        android:layout_marginStart="8dp" />
+
+    <ExpandableListView
+        android:id="@+id/list_view_exp"
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_marginTop="56dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        android:layout_marginLeft="47dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
