--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -7,7 +7,7 @@
     tools:context="com.kld2.recipelist.RecipeActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/recipe_link_icon"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginLeft="8dp"
@@ -21,34 +21,31 @@
         android:id="@+id/recipe_link"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_marginLeft="8dp"
         android:autoLink="web"
         android:textColorLink="@color/colorPrimaryDark"
-        app:layout_constraintLeft_toRightOf="@+id/imageView"
+        app:layout_constraintLeft_toRightOf="@+id/recipe_link_icon"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="10dp"
         android:layout_marginStart="8dp" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/recipe_time_icon"
         android:layout_width="24dp"
         android:layout_height="24dp"
         app:srcCompat="@drawable/ic_access_time_black_48dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/recipe_link_icon"
         android:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/recipe_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="32dp"
-        android:text="TextView"
-        app:layout_constraintLeft_toRightOf="@+id/imageView2"
+        app:layout_constraintLeft_toRightOf="@+id/recipe_time_icon"
         app:layout_constraintTop_toTopOf="@+id/recipe_link"
         android:layout_marginStart="8dp" />
 
@@ -57,7 +54,7 @@
         android:layout_height="0dp"
         android:layout_width="0dp"
         android:layout_marginTop="56dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/recipe_time_icon"
         android:layout_marginLeft="47dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
