--- a/app/src/main/res/menu/recipe_menu.xml
+++ b/app/src/main/res/menu/recipe_menu.xml
@@ -3,6 +3,7 @@
     <item
         android:id="@+id/menu_delete"
         android:orderInCategory="1"
-        app:showAsAction="never"
+        app:showAsAction="ifRoom"
+        android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/delete_string"/>
 </menu>
