--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -1,49 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.view.ViewPager
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pager"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.kld2.recipelist.RecipeActivity">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/recipe_link_icon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_link_black_48dp"
-        android:layout_marginStart="8dp" />
-
-    <TextView
-        android:id="@+id/recipe_link"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:autoLink="web"
-        android:textColorLink="@color/colorPrimaryDark"
-        app:layout_constraintLeft_toRightOf="@+id/recipe_link_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="8dp" />
+        android:layout_gravity="top" />
 
-    <ImageView
-        android:id="@+id/recipe_time_icon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        app:srcCompat="@drawable/ic_access_time_black_48dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/recipe_link_icon"
-        android:layout_marginStart="8dp" />
-
-    <TextView
-        android:id="@+id/recipe_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        app:layout_constraintLeft_toRightOf="@+id/recipe_time_icon"
-        app:layout_constraintTop_toTopOf="@+id/recipe_link"
-        android:layout_marginStart="8dp" />
-
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.view.ViewPager>
