--- a/app/src/main/res/layout/recipe_time_entry.xml
+++ b/app/src/main/res/layout/recipe_time_entry.xml
@@ -8,7 +8,7 @@
         android:id="@+id/prep_time_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="Prep Time:"
         android:textSize="16sp"
@@ -19,7 +19,7 @@
         android:id="@+id/prep_hours_edit_text"
         android:layout_width="48dp"
         android:layout_height="41dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="-1dp"
         android:ems="10"
         android:inputType="number"
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:text="hour(s)"
         app:layout_constraintLeft_toRightOf="@+id/prep_hours_edit_text"
-        android:layout_marginLeft="0dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/prep_time_header" />
 
@@ -45,7 +45,7 @@
         android:inputType="number"
         android:hint="0"
         app:layout_constraintLeft_toRightOf="@+id/prep_hours_text"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="-1dp"
         app:layout_constraintTop_toBottomOf="@+id/prep_time_header" />
 
@@ -57,13 +57,13 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/prep_time_header"
         app:layout_constraintLeft_toRightOf="@+id/prep_minutes_edit_text"
-        android:layout_marginLeft="0dp" />
+        android:layout_marginStart="0dp" />
 
     <TextView
         android:id="@+id/cook_time_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="9dp"
         android:text="Cook Time:"
         android:textSize="16sp"
@@ -74,7 +74,7 @@
         android:id="@+id/cook_hours_edit_text"
         android:layout_width="48dp"
         android:layout_height="41dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="-1dp"
         android:ems="10"
         android:inputType="number"
@@ -88,7 +88,7 @@
         android:layout_height="wrap_content"
         android:text="hour(s)"
         app:layout_constraintLeft_toRightOf="@+id/cook_hours_edit_text"
-        android:layout_marginLeft="0dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/cook_time_header" />
 
@@ -100,7 +100,7 @@
         android:inputType="number"
         android:hint="0"
         app:layout_constraintLeft_toRightOf="@+id/cook_hours_text"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="-1dp"
         app:layout_constraintTop_toBottomOf="@+id/cook_time_header" />
 
@@ -112,6 +112,6 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/cook_time_header"
         app:layout_constraintLeft_toRightOf="@+id/cook_minutes_edit_text"
-        android:layout_marginLeft="0dp" />
+        android:layout_marginStart="0dp" />
 
 </android.support.constraint.ConstraintLayout>
