--- a/app/src/main/res/layout/recipe_time_entry.xml
+++ b/app/src/main/res/layout/recipe_time_entry.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -114,4 +114,4 @@
         app:layout_constraintLeft_toRightOf="@+id/cook_minutes_edit_text"
         android:layout_marginStart="0dp" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.ConstraintLayout>
